Updated to latest ng-table. Fixed sorting. Fixed column alignment

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -40,3 +40,7 @@
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
     background-color: #EEEEEE !important;
 }
+
+.ng-table th {
+    text-align: left;
+}
